--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-div {
-  border:solid black 2px;
-}
 #headshot {
   max-width: 100px;
   float:left;
@@ -9,7 +6,12 @@ div {
 }
 #header {
   min-height:100px;
+  margin-bottom:1rem;
+  padding-left:0;
 }
-.project-card {
-  width:20rem;
+.btn {
+  margin:.2rem;
+}
+.sidebar {
+  background-color: #eee;
 }
