--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,32 @@
+@media screen and (min-width:768px){
+  body {
+    background-image: url('../images/bg.jpg');
+    background-size:;
+    background-position: center;
+    background-repeat:no-repeat;
+  }
+}
+
 #headshot {
   max-width: 100px;
   float:left;
   margin: 0 1em 0 0;
-
 }
 #header {
   min-height:100px;
   margin-bottom:1rem;
   padding-left:0;
+  background:#fff;
 }
 .btn {
   margin:.2rem;
 }
-.sidebar {
-  background-color: #eee;
+.projects, .sidebar, #header {
+  background-color:rgba(256, 256, 256, .9);
+  border-radius: 1rem;
+}
+.no-bullet {
+  list-style-type: none;
+  margin:0;
+  padding:0;
 }
