--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
   max-width: 100px;
   float:left;
   margin: 0 1em 0 0;
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
 }
 #header {
   min-height:100px;
@@ -21,9 +23,10 @@
 .btn {
   margin:.2rem;
 }
-.projects, .sidebar, #header {
+.main, #header {
   background-color:rgba(256, 256, 256, .9);
   border-radius: 1rem;
+  margin-bottom:1rem;
 }
 .no-bullet {
   list-style-type: none;
