add gh and li icons.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 @media screen and (min-width:768px){
   body {
     background-image: url('../images/bg.jpg');
-    background-size:;
     background-position: center;
     background-repeat:no-repeat;
   }
@@ -41,4 +40,7 @@
 }
 .main {
   padding:1rem;
+}
+.bug {
+  max-height:20px;
 }
